custom view for the student list page

--- a/web/themes/custom/simplecollege/templates/node.html.twig
+++ b/web/themes/custom/simplecollege/templates/node.html.twig
@@ -12,6 +12,11 @@
   {% endif %}
   {{ title_suffix }}
 
+{# {{ dump() }}
+{{ kint(_context|keys) }}
+{{ dump(title_suffix) }}
+{{ dump(title_prefix) }} #}
+
   {% if display_submitted %}
     <footer>
       {{ author_picture }}
