--- a/web/themes/custom/simplecollege/css/custom.css
+++ b/web/themes/custom/simplecollege/css/custom.css
@@ -27,13 +27,12 @@
 }
 
 .layout-content {
-    background: white;
+    background: lightsteelblue;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.recently-joined,
 .sidebar-right,
 .sidebar-left {
     background: lightgray;
@@ -73,7 +72,7 @@
 }
 
 .site-name {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -107,21 +106,24 @@
     border-radius: 5px;
 }
 
-#main-menu-block ul {
+.main-menu-block ul {
     margin: 0;
     list-style: none;
     display: flex;
     flex-direction: column-reverse;
     gap: 5px;
     padding: 10px;
-}
-
-#main-menu-block li {
-    display: inline;
     background: lightblue;
 }
 
-#main-menu-block a {
+.main-menu-block li {
+    display: inline;
+}
+.main-menu-block li:hover{
+    color: #343a40;
+    background: #ffc107;
+}
+.main-menu-block a {
     text-decoration: none;
     color: black;
     padding: 1px;
@@ -129,9 +131,7 @@
     transition: 0.3s;
 }
 
-#main-menu-block a:hover {
-    background: #ffc107;
-    color: #343a40;
+.main-menu-block a:hover {
     border-radius: 5px;
 }
 
