--- a/web/themes/custom/simplecollege/templates/html.html.twig
+++ b/web/themes/custom/simplecollege/templates/html.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
-    <link rel="icon" href="{{ base_path }}themes/custom/simplecollege/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ base_path ~ 'themes/custom/simplecollege/favicon.ico' }}" type="image/x-icon">
     <head-placeholder token="{{ placeholder_token }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token }}">
